Fix reaction issue

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-ID_CHANNEL =
-ID_GUILD =
-ID_LOG_CHANNEL =
-ID_CHAT_CHANNEL =
-BOT_TOKEN =
+ID_CHANNEL = 1060906547754053645
+ID_GUILD = 1060906547754053642
+ID_LOG_CHANNEL = 1060906547754053645
+ID_CHAT_CHANNEL = 1060906547754053645
+BOT_TOKEN = MTA2MDkxMzQ0NDAyNDQ4Mzg4MA.GKQjmp.46sz7tqHysy9UnbRqdOQzFJoFr2EtqLqJEf474
 EMOTE_LIST =["\U00002B06",
     "\U000023EB",
     "\U00002B07",
